[package]
name = "newdoku"
version = "0.6.1"
edition = "2021"
description = "A small library for displaying and solving Sudokus in ANSI-compliant terminals."
license = "MIT"
keywords = ["sudoku", "games", "fun"]
categories = ["command-line-utilities", "games"]
readme = "README.md"
repository = "https://github.com/Piturnah/newdoku/"
exclude = ["demo.gif", ".github", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
clap = {version = "3.1.10", features = ["derive"], optional = true}

[features]
default = ["clap"]
clap = ["dep:clap"]
